--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8990,11 +8990,17 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 253, ../sass/app.scss */
+@media (min-width: 768px) {
+  /* line 234, ../sass/app.scss */
+  .reset-btn {
+    right: 50.2%;
+  }
+}
+/* line 258, ../sass/app.scss */
 .reset-btn:active {
   opacity: .3;
 }
-/* line 257, ../sass/app.scss */
+/* line 262, ../sass/app.scss */
 .reset-btn i {
   margin: 0;
   padding: 0;
@@ -9002,13 +9008,13 @@ header {
   top: 2px;
 }
 
-/* line 265, ../sass/app.scss */
+/* line 270, ../sass/app.scss */
 .gmap {
   width: 100%;
   height: 30%;
 }
 
-/* line 270, ../sass/app.scss */
+/* line 275, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 15px;
@@ -9032,12 +9038,18 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 289, ../sass/app.scss */
+@media (min-width: 768px) {
+  /* line 275, ../sass/app.scss */
+  .fire-btn {
+    left: 50.2%;
+  }
+}
+/* line 299, ../sass/app.scss */
 .fire-btn:active {
   opacity: .3;
 }
 
-/* line 294, ../sass/app.scss */
+/* line 304, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 15px;
@@ -9052,8 +9064,14 @@ header {
   -moz-box-shadow: 0px 8px 36px -9px black;
   box-shadow: 0px 8px 36px -9px black;
 }
+@media (min-width: 768px) {
+  /* line 304, ../sass/app.scss */
+  .fire-btn-shadow {
+    left: 50.2%;
+  }
+}
 
-/* line 309, ../sass/app.scss */
+/* line 324, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 15px;
@@ -9068,18 +9086,24 @@ header {
   -moz-box-shadow: 0px 8px 36px -9px black;
   box-shadow: 0px 8px 36px -9px black;
 }
+@media (min-width: 768px) {
+  /* line 324, ../sass/app.scss */
+  .reset-btn-shadow {
+    right: 50.2%;
+  }
+}
 
-/* line 324, ../sass/app.scss */
+/* line 344, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 328, ../sass/app.scss */
+/* line 348, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 333, ../sass/app.scss */
+/* line 353, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
@@ -9087,14 +9111,14 @@ header {
   overflow: hidden;
 }
 @media (min-width: 768px) {
-  /* line 333, ../sass/app.scss */
+  /* line 353, ../sass/app.scss */
   .park-nav ul {
     width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 346, ../sass/app.scss */
+/* line 366, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -9102,7 +9126,7 @@ header {
   padding: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 346, ../sass/app.scss */
+  /* line 366, ../sass/app.scss */
   .park-nav ul li {
     width: 318px;
     /*account for padding*/
@@ -9111,7 +9135,7 @@ header {
     display: inline-block;
   }
 }
-/* line 360, ../sass/app.scss */
+/* line 380, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9129,21 +9153,21 @@ header {
   transition: all 0.2s ease-out;
 }
 @media (min-width: 768px) {
-  /* line 376, ../sass/app.scss */
+  /* line 396, ../sass/app.scss */
   .park-nav ul li p {
     padding: 5px 40px 5px 10%;
   }
-  /* line 380, ../sass/app.scss */
+  /* line 400, ../sass/app.scss */
   .park-nav ul li:nth-child(1n) {
     text-align: right;
   }
-  /* line 383, ../sass/app.scss */
+  /* line 403, ../sass/app.scss */
   .park-nav ul li:nth-child(2n) {
     text-align: left;
   }
 }
 
-/* line 391, ../sass/app.scss */
+/* line 411, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.6s ease-in-out;
   -moz-transition: all 0.6s ease-in-out;
@@ -9155,20 +9179,20 @@ header {
   background-position: left center;
   background-repeat: no-repeat;
 }
-/* line 397, ../sass/app.scss */
+/* line 417, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 400, ../sass/app.scss */
+/* line 420, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 404, ../sass/app.scss */
+/* line 424, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 409, ../sass/app.scss */
+/* line 429, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9184,7 +9208,7 @@ header {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 420, ../sass/app.scss */
+/* line 440, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 72%;
@@ -9194,25 +9218,25 @@ header {
   background-color: #fff;
 }
 
-/* line 429, ../sass/app.scss */
+/* line 449, ../sass/app.scss */
 .park-list-container {
   position: relative;
   width: 100%;
 }
 
-/* line 434, ../sass/app.scss */
+/* line 454, ../sass/app.scss */
 .park-distance-ul {
   overflow: hidden;
   width: 100%;
   height: 56px;
 }
 @media all and (min-width: 768px) {
-  /* line 434, ../sass/app.scss */
+  /* line 454, ../sass/app.scss */
   .park-distance-ul {
     height: auto;
   }
 }
-/* line 443, ../sass/app.scss */
+/* line 463, ../sass/app.scss */
 .park-distance-ul ul {
   margin: 0;
   padding: 0;
@@ -9221,12 +9245,12 @@ header {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 443, ../sass/app.scss */
+  /* line 463, ../sass/app.scss */
   .park-distance-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 454, ../sass/app.scss */
+/* line 474, ../sass/app.scss */
 .park-distance-ul ul li {
   list-style: none;
   position: relative;
@@ -9247,13 +9271,13 @@ header {
   transition: all 1s ease-in-out;
 }
 @media all and (min-width: 768px) {
-  /* line 454, ../sass/app.scss */
+  /* line 474, ../sass/app.scss */
   .park-distance-ul ul li {
     height: 75px;
     border: 6px solid #71e271;
   }
 }
-/* line 474, ../sass/app.scss */
+/* line 494, ../sass/app.scss */
 .park-distance-ul ul li:hover {
   opacity: .7;
   -webkit-transition: all 0.1s ease-in-out;
@@ -9262,7 +9286,7 @@ header {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 479, ../sass/app.scss */
+/* line 499, ../sass/app.scss */
 .park-distance-ul ul li .number {
   font-size: 20px;
   display: inline-block;
@@ -9273,19 +9297,19 @@ header {
   color: #502d07;
 }
 
-/* line 492, ../sass/app.scss */
+/* line 512, ../sass/app.scss */
 .park-facilities-ul {
   overflow: hidden;
   width: 100%;
   height: 26px;
 }
 @media all and (min-width: 768px) {
-  /* line 492, ../sass/app.scss */
+  /* line 512, ../sass/app.scss */
   .park-facilities-ul {
     height: auto;
   }
 }
-/* line 501, ../sass/app.scss */
+/* line 521, ../sass/app.scss */
 .park-facilities-ul ul {
   margin: 0;
   padding: 0;
@@ -9294,12 +9318,12 @@ header {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 501, ../sass/app.scss */
+  /* line 521, ../sass/app.scss */
   .park-facilities-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 512, ../sass/app.scss */
+/* line 532, ../sass/app.scss */
 .park-facilities-ul ul li {
   list-style: none;
   position: relative;
@@ -9318,12 +9342,12 @@ header {
   transition: all 1s ease-in-out;
 }
 @media all and (min-width: 768px) {
-  /* line 512, ../sass/app.scss */
+  /* line 532, ../sass/app.scss */
   .park-facilities-ul ul li {
     height: 30px;
   }
 }
-/* line 529, ../sass/app.scss */
+/* line 549, ../sass/app.scss */
 .park-facilities-ul ul li .item {
   font-size: 16px;
   display: inline-block;
@@ -9334,31 +9358,31 @@ header {
   color: #502d07;
 }
 @media all and (min-width: 768px) {
-  /* line 529, ../sass/app.scss */
+  /* line 549, ../sass/app.scss */
   .park-facilities-ul ul li .item {
     font-size: 18px;
     margin-top: -14px;
   }
 }
 
-/* line 547, ../sass/app.scss */
+/* line 567, ../sass/app.scss */
 .park-selected {
   opacity: .5;
 }
 
-/* line 551, ../sass/app.scss */
+/* line 571, ../sass/app.scss */
 .park-selected-official {
   border: 4px solid #502d07 !important;
   opacity: 1;
 }
 @media all and (min-width: 768px) {
-  /* line 551, ../sass/app.scss */
+  /* line 571, ../sass/app.scss */
   .park-selected-official {
     border: 6px solid #502d07 !important;
   }
 }
 
-/* line 560, ../sass/app.scss */
+/* line 580, ../sass/app.scss */
 .number-overlay {
   font-size: 62px;
   display: inline-block;
@@ -9377,29 +9401,29 @@ header {
   transform: scale(0.5, 0.5);
 }
 
-/* line 574, ../sass/app.scss */
+/* line 594, ../sass/app.scss */
 .park-info-cont {
   width: 100%;
   position: relative;
 }
-/* line 578, ../sass/app.scss */
+/* line 598, ../sass/app.scss */
 .park-info-cont ul {
   padding: 0 15px;
   margin: 0;
   color: #502d07;
 }
-/* line 583, ../sass/app.scss */
+/* line 603, ../sass/app.scss */
 .park-info-cont ul li {
   display: inline-block;
 }
 @media (min-width: 321px) {
-  /* line 583, ../sass/app.scss */
+  /* line 603, ../sass/app.scss */
   .park-info-cont ul li {
     display: block;
   }
 }
 
-/* line 594, ../sass/app.scss */
+/* line 614, ../sass/app.scss */
 .park-images-ul {
   overflow: hidden;
   width: 100%;
@@ -9407,12 +9431,12 @@ header {
   position: relative;
 }
 @media all and (min-width: 768px) {
-  /* line 594, ../sass/app.scss */
+  /* line 614, ../sass/app.scss */
   .park-images-ul {
     height: auto;
   }
 }
-/* line 604, ../sass/app.scss */
+/* line 624, ../sass/app.scss */
 .park-images-ul ul {
   margin: 0;
   padding: 0;
@@ -9422,28 +9446,28 @@ header {
   height: 148px;
 }
 @media all and (min-width: 768px) {
-  /* line 604, ../sass/app.scss */
+  /* line 624, ../sass/app.scss */
   .park-images-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 616, ../sass/app.scss */
+/* line 636, ../sass/app.scss */
 .park-images-ul ul li {
   display: inline-block;
   padding-right: 5px;
 }
-/* line 620, ../sass/app.scss */
+/* line 640, ../sass/app.scss */
 .park-images-ul ul li img {
   height: 95px;
 }
 @media all and (min-width: 768px) {
-  /* line 620, ../sass/app.scss */
+  /* line 640, ../sass/app.scss */
   .park-images-ul ul li img {
     height: 125px;
   }
 }
 
-/* line 630, ../sass/app.scss */
+/* line 650, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9458,7 +9482,7 @@ header {
   -webkit-border-radius: 50%;
 }
 
-/* line 644, ../sass/app.scss */
+/* line 664, ../sass/app.scss */
 .li-gradient-overlay {
   position: absolute;
   top: 0;
@@ -9467,7 +9491,7 @@ header {
   bottom: 0;
 }
 
-/* line 652, ../sass/app.scss */
+/* line 672, ../sass/app.scss */
 .chosen-park-list {
   position: fixed;
   top: auto;
@@ -9485,13 +9509,25 @@ header {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 );
   opacity: .9;
 }
-/* line 669, ../sass/app.scss */
+@media (min-width: 1200px) {
+  /* line 672, ../sass/app.scss */
+  .chosen-park-list {
+    right: 8%;
+  }
+}
+@media (min-width: 1800px) {
+  /* line 672, ../sass/app.scss */
+  .chosen-park-list {
+    right: 20%;
+  }
+}
+/* line 699, ../sass/app.scss */
 .chosen-park-list ul {
   padding: 0;
   margin: 0;
   padding: 10px 14px 10px 40px;
 }
-/* line 674, ../sass/app.scss */
+/* line 704, ../sass/app.scss */
 .chosen-park-list ul li {
   text-align: right;
   list-style: none;
@@ -9500,7 +9536,7 @@ header {
   padding: 4px 0;
 }
 
-/* line 684, ../sass/app.scss */
+/* line 714, ../sass/app.scss */
 .loading-screen {
   position: fixed;
   top: 0;
@@ -9515,7 +9551,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 694, ../sass/app.scss */
+/* line 724, ../sass/app.scss */
 .loading-screen .overlay {
   position: fixed;
   top: 0;
@@ -9525,7 +9561,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 704, ../sass/app.scss */
+/* line 734, ../sass/app.scss */
 .loading-screen .contents {
   position: fixed;
   top: 50%;
@@ -9537,18 +9573,18 @@ header {
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
-/* line 711, ../sass/app.scss */
+/* line 741, ../sass/app.scss */
 .loading-screen .contents svg {
   width: 60px;
   height: 60px;
 }
-/* line 716, ../sass/app.scss */
+/* line 746, ../sass/app.scss */
 .loading-screen .contents .text {
   height: 20px;
   position: relative;
   margin: 10px auto;
 }
-/* line 721, ../sass/app.scss */
+/* line 751, ../sass/app.scss */
 .loading-screen .contents .text p {
   font-size: 14px;
   padding: 0;
@@ -9559,7 +9595,7 @@ header {
   opacity: 0;
 }
 
-/* line 735, ../sass/app.scss */
+/* line 765, ../sass/app.scss */
 .loading-screen-small {
   position: absolute;
   top: 0;
@@ -9574,7 +9610,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 745, ../sass/app.scss */
+/* line 775, ../sass/app.scss */
 .loading-screen-small .overlay {
   position: absolute;
   top: 0;
@@ -9584,7 +9620,7 @@ header {
   background-color: white;
   opacity: .8;
 }
-/* line 755, ../sass/app.scss */
+/* line 785, ../sass/app.scss */
 .loading-screen-small svg {
   width: 35px;
   height: 35px;
@@ -9599,13 +9635,13 @@ header {
   transform: translateX(-50%) translateY(-50%);
 }
 
-/* line 766, ../sass/app.scss */
+/* line 796, ../sass/app.scss */
 .loading-screen-fail {
   text-align: center;
   font-size: 18px;
   display: none;
 }
-/* line 771, ../sass/app.scss */
+/* line 801, ../sass/app.scss */
 .loading-screen-fail .overlay {
   position: fixed;
   top: 0;
@@ -9621,7 +9657,7 @@ header {
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 783, ../sass/app.scss */
+/* line 813, ../sass/app.scss */
 .loading-screen-fail .loading-text-fail {
   position: fixed;
   top: 50%;
@@ -9634,14 +9670,14 @@ header {
   transform: translateX(-50%) translateY(-50%);
 }
 
-/* line 792, ../sass/app.scss */
+/* line 822, ../sass/app.scss */
 .fa-styling {
   color: #71e271;
   width: 16px;
   text-align: center;
 }
 
-/* line 798, ../sass/app.scss */
+/* line 828, ../sass/app.scss */
 .fa-styling-small {
   color: #71e271;
   font-size: 10px !important;
@@ -9649,14 +9685,14 @@ header {
   vertical-align: middle;
 }
 
-/* line 805, ../sass/app.scss */
+/* line 835, ../sass/app.scss */
 .image-bullet-point {
   width: 14px;
   margin-left: 10px;
   margin-top: -3px;
 }
 
-/* line 811, ../sass/app.scss */
+/* line 841, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9664,7 +9700,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 823, ../sass/app.scss */
+/* line 853, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9674,7 +9710,7 @@ footer {
   opacity: 0;
 }
 
-/* line 828, ../sass/app.scss */
+/* line 858, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9684,17 +9720,17 @@ footer {
   opacity: 1;
 }
 
-/* line 833, ../sass/app.scss */
+/* line 863, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 837, ../sass/app.scss */
+/* line 867, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
-/* line 841, ../sass/app.scss */
+/* line 871, ../sass/app.scss */
 .ani-fadeOutZindex {
   opacity: 0;
   z-index: -1;
@@ -9705,7 +9741,7 @@ footer {
   animation: zoomAniNoRotateRev 0.3s forwards;
 }
 
-/* line 847, ../sass/app.scss */
+/* line 877, ../sass/app.scss */
 .ani-fadeInZindex {
   opacity: 1;
   z-index: 1;
@@ -9717,7 +9753,7 @@ footer {
 }
 
 /* ANIMATION SPECIFIC */
-/* line 859, ../sass/app.scss */
+/* line 889, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.7s forwards;
   -moz-animation: zoomAni 0.7s forwards;
@@ -9726,7 +9762,7 @@ footer {
   animation: zoomAni 0.7s forwards;
 }
 
-/* line 863, ../sass/app.scss */
+/* line 893, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9735,7 +9771,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 867, ../sass/app.scss */
+/* line 897, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9744,7 +9780,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 871, ../sass/app.scss */
+/* line 901, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9753,7 +9789,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 875, ../sass/app.scss */
+/* line 905, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9762,7 +9798,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 879, ../sass/app.scss */
+/* line 909, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9775,7 +9811,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 887, ../sass/app.scss */
+/* line 917, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 0.5s forwards;
   -moz-animation: fadeInAndUp 0.5s forwards;
@@ -9788,7 +9824,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.08, 1.27);
 }
 
-/* line 895, ../sass/app.scss */
+/* line 925, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9804,7 +9840,7 @@ footer {
   perspective: 200px;
 }
 
-/* line 906, ../sass/app.scss */
+/* line 936, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 4.6s forwards;
   -moz-animation: liButtonClickText 4.6s forwards;
@@ -9829,7 +9865,7 @@ footer {
   perspective: 200px;
 }
 
-/* line 922, ../sass/app.scss */
+/* line 952, ../sass/app.scss */
 .top-leaf {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreen 0.5s infinite;
@@ -9839,7 +9875,7 @@ footer {
   animation: colorSwapToBrightGreen 0.5s infinite;
 }
 
-/* line 927, ../sass/app.scss */
+/* line 957, ../sass/app.scss */
 .bottom-leaf {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreen 0.5s infinite;
@@ -9849,7 +9885,7 @@ footer {
   animation: colorSwapToDarkGreen 0.5s infinite;
 }
 
-/* line 932, ../sass/app.scss */
+/* line 962, ../sass/app.scss */
 .top-leaf-slow {
   fill: #71E271;
   -webkit-animation: colorSwapToBrightGreenSlow 2.7s infinite;
@@ -9859,7 +9895,7 @@ footer {
   animation: colorSwapToBrightGreenSlow 2.7s infinite;
 }
 
-/* line 937, ../sass/app.scss */
+/* line 967, ../sass/app.scss */
 .bottom-leaf-slow {
   fill: #00CA3E;
   -webkit-animation: colorSwapToDarkGreenSlow 2.7s infinite;
@@ -9869,7 +9905,7 @@ footer {
   animation: colorSwapToDarkGreenSlow 2.7s infinite;
 }
 
-/* line 942, ../sass/app.scss */
+/* line 972, ../sass/app.scss */
 .loading-text {
   -webkit-animation: loadingText 0.9s infinite;
   -moz-animation: loadingText 0.9s infinite;
