--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -195,6 +195,13 @@ header {
 	}
 }
 
+.no-images {
+	position: absolute;
+	left: 50%;
+	top: 45%;
+	@include transformGeneral(translate3d(-50%,-50%,0));
+}
+
 .title {
 	letter-spacing: 2px;
 	font-weight: 700;
